--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App{
-  width: 100%;
   max-width: 1920px;
-  height: 100vh;
   margin: 0;
   background-color: #0C0B0E;
   padding: 0;
@@ -106,10 +104,6 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.322);
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
   z-index: 10;
 }
 #hero-cont video {
@@ -145,13 +139,17 @@
   flex-direction: column;
   text-align: right;
   right: 25px;
-  bottom: 2%;
+  bottom: 100px;
+  z-index: 10;
 }
 .hero-socials a{
   text-decoration: none;
   color: #fff;
   font-size: 20px;
   margin-top: 10px;
+}
+.hero-socials a:hover{
+  color: rgb(172, 172, 172);
 }
 .hero-socials span{
   font-size: 16px;
