layout-text-fixed

--- a/src/App.css
+++ b/src/App.css
@@ -489,6 +489,7 @@
   --bs-gutter-x: 0 !important;
   max-width: 1440px;
   margin: auto;
+  justify-content: space-between;
 }
 .card-head{
   display: flex;
