--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-.App{
+.App {
   max-width: 1920px;
   margin: 0;
   background-image: url(./Images/stars.jpg);
   background-attachment: fixed;
-  background-color: #191A1D;
+  background-color: #191a1d;
   background-blend-mode: overlay;
   padding: 0;
   color: #fff;
 }
 
 /* LOADER */
-.load-container{
+.load-container {
   z-index: 100;
   height: 950vh;
   width: 100%;
@@ -31,33 +31,33 @@
   background-color: transparent;
 }
 .leo {
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 50%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
 .green-orbit {
-	width: 120px;
-	height: 120px;
+  width: 120px;
+  height: 120px;
   border: 1px solid #91ffbfa5;
   -webkit-animation: spin3D 2s linear 0s infinite;
 }
 .blue-orbit {
-	width: 165px;
-	height: 165px;
+  width: 165px;
+  height: 165px;
   border: 1px solid #91daffa5;
-  -webkit-animation: spin3D 3s linear .2s infinite;
+  -webkit-animation: spin3D 3s linear 0.2s infinite;
 }
 .red-orbit {
-	width: 90px;
-	height: 90px;
+  width: 90px;
+  height: 90px;
   border: 1px solid #ffca91a5;
   -webkit-animation: spin3D 1s linear 0s infinite;
 }
 .white-orbit {
-	width: 60px;
-	height: 60px;
+  width: 60px;
+  height: 60px;
   border: 2px solid #ffffff;
   -webkit-animation: spin3D 10s linear 0s infinite;
 }
@@ -65,37 +65,37 @@
   transform: rotate3D(1, 1, 1, 90deg);
 }
 .w2 {
-  transform: rotate3D(1, 2, .5, 90deg);
+  transform: rotate3D(1, 2, 0.5, 90deg);
 }
 .w3 {
-  transform: rotate3D(.5, 1, 2, 90deg);
+  transform: rotate3D(0.5, 1, 2, 90deg);
 }
 @keyframes spin3D {
   from {
-    transform: rotate3d(.5,.5,.5, 360deg);
+    transform: rotate3d(0.5, 0.5, 0.5, 360deg);
   }
-  to{
+  to {
     transform: rotate3d(0deg);
   }
 }
 
 /* NAVBAR */
-.navbar{
+.navbar {
   z-index: 10;
   max-height: 100px;
   max-width: 1440px;
 }
-.navbar-brand img{
+.navbar-brand img {
   max-height: 100px;
 }
-.navbar .collapse .btn{
+.navbar .collapse .btn {
   color: #fff !important;
   background: linear-gradient(to top left, #1c1f24 15%, #000000 100%);
 }
-.navbar .collapse .btn:hover{
+.navbar .collapse .btn:hover {
   background: linear-gradient(to top right, #000 15%, #1c1f24 100%);
 }
-.mob-rate a{
+.mob-rate a {
   color: #fff;
   text-decoration: none;
 }
@@ -121,7 +121,7 @@
 }
 
 /* HERO */
-#hero-cont{
+#hero-cont {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -141,7 +141,7 @@
   height: 100%;
   object-fit: cover;
 }
-.hero-text{
+.hero-text {
   position: absolute;
   z-index: 200;
   max-width: 600px;
@@ -149,18 +149,18 @@
   text-align: center;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
-.hero-text span{
+.hero-text span {
   letter-spacing: 20px;
 }
-.hero-text h1{
+.hero-text h1 {
   font-size: 60px;
 }
-.hero-text p{
+.hero-text p {
   letter-spacing: 2px;
 }
-.hero-socials{
+.hero-socials {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -169,38 +169,38 @@
   bottom: 100px;
   z-index: 10;
 }
-.hero-socials img{
+.hero-socials img {
   max-height: 20px;
   background-color: #fff;
   border-radius: 50%;
 }
-.hero-socials a{
+.hero-socials a {
   text-decoration: none;
   color: #fff;
   font-size: 20px;
   margin-top: 10px;
 }
-.hero-socials a:hover{
+.hero-socials a:hover {
   color: rgb(172, 172, 172);
 }
-.hero-socials span{
+.hero-socials span {
   font-size: 16px;
 }
 
 /* KEYFEATURES */
-#keyfeature-cont{
+#keyfeature-cont {
   width: 100%;
   margin: 100px auto 100px auto;
 }
-#keyfeature-cont .container{
+#keyfeature-cont .container {
   max-width: 1440px;
-  width:90%;
+  width: 90%;
 }
-#keyfeature-cont .card{
+#keyfeature-cont .card {
   background-color: transparent !important;
   font-family: orbitron;
 }
-#keyfeature-cont .card-img-top{
+#keyfeature-cont .card-img-top {
   max-height: 90px;
   width: 90px !important;
   background: transparent;
@@ -209,34 +209,34 @@
 }
 
 /* MEMEFORCE */
-#memeforce-cont{
+#memeforce-cont {
   background-color: rgba(0, 0, 0, 0.733);
   margin: 100px auto 100px auto;
 }
-#memeforce-cont .row{
-  --bs-gutter-x:0;
+#memeforce-cont .row {
+  --bs-gutter-x: 0;
   width: 90%;
   margin: auto;
 }
-#memeforce-cont h2{
+#memeforce-cont h2 {
   font-family: orbitron;
   font-weight: 700;
   font-size: 36px;
 }
-#memeforce-cont p{
+#memeforce-cont p {
   font-size: 20px;
 }
-.bsc-launch{
+.bsc-launch {
   width: fit-content !important;
   max-width: 450px !important;
   height: 350px;
   position: relative;
 }
-.bsc-launch .card-body{
+.bsc-launch .card-body {
   font-family: orbitron;
   letter-spacing: 2px;
 }
-#card-logo{
+#card-logo {
   position: absolute;
   bottom: -20px;
   left: 45%;
@@ -245,7 +245,7 @@
 }
 
 /* TOKENOMICS */
-#tokenomics-cont{
+#tokenomics-cont {
   background: url(./Images/network.jpg.png);
   background-repeat: no-repeat;
   background-position: top;
@@ -253,101 +253,101 @@
   background-color: rgba(0, 0, 0, 0.322);
   margin: 100px auto 100px auto;
 }
-#tokenomics-cont h2{
+#tokenomics-cont h2 {
   font-size: 36px;
   font-family: orbitron;
   font-weight: 700;
   text-align: center;
 }
-#tokenomics-cont .row{
+#tokenomics-cont .row {
   width: 90%;
   max-width: 1440px;
   font-family: orbitron;
   margin: auto;
 }
-#tokenomics-cont .row .col-lg-4{
+#tokenomics-cont .row .col-lg-4 {
   background-color: rgba(0, 0, 0, 0.733);
   min-width: 300px;
   max-width: 450px;
 }
-#tokenomics-cont .row .col-lg-4:hover{
+#tokenomics-cont .row .col-lg-4:hover {
   outline: 1px solid #fff;
 }
-#tokenomics-cont .row h2{
+#tokenomics-cont .row h2 {
   font-size: 70px;
 }
-#tokenomics-cont .row h3{
+#tokenomics-cont .row h3 {
   font-size: 26px;
 }
 
 /* ABOUT US */
-#about-cont{
+#about-cont {
   padding-top: 100px;
   padding-bottom: 100px;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.733);
   font-family: orbitron;
 }
-#about-cont .container{
+#about-cont .container {
   width: 90%;
   max-width: 1440px;
 }
-#about-cont h2{
+#about-cont h2 {
   font-size: 36px;
   margin-bottom: 25px;
   font-weight: 700;
 }
-#about-cont p{
+#about-cont p {
   font-size: 18px;
   letter-spacing: 1px;
 }
-.about-socials{
+.about-socials {
   max-width: 300px;
   width: 100%;
   margin: auto;
 }
-.about-socials a{
+.about-socials a {
   color: #fff;
   text-decoration: none;
   font-size: 36px;
 }
-.about-socials a:hover{
+.about-socials a:hover {
   color: rgb(190, 190, 190);
   transform: scale(1.1);
 }
 
 /* ROADMAP */
-#roadmap-cont{
+#roadmap-cont {
   text-align: center;
   font-family: orbitron;
   margin: 100px auto 100px auto;
 }
-#roadmap-cont h2{
+#roadmap-cont h2 {
   font-size: 36px;
   margin-bottom: 25px;
   font-weight: 700;
 }
-#roadmap-cont .row{
+#roadmap-cont .row {
   max-width: 1440px;
   width: 90%;
 }
-#roadmap-cont .phase ul{
+#roadmap-cont .phase ul {
   list-style: none;
   text-align: start;
   font-size: 20px;
 }
-#roadmap-cont .phase ul li{
+#roadmap-cont .phase ul li {
   margin: 15px auto;
   list-style-position: outside;
 }
-.phase{
+.phase {
   width: fit-content !important;
   max-width: 450px !important;
   position: relative;
 }
 
 /* BSC TUTORIAL */
-#bsctut-cont{
+#bsctut-cont {
   text-align: start;
   position: relative;
   background: url(./Images/wireframe.png);
@@ -358,31 +358,31 @@
   font-family: orbitron;
   margin: 100px auto 100px auto;
 }
-#bsctut-cont .row{
+#bsctut-cont .row {
   width: 90%;
   max-width: 1440px;
   margin: auto;
 }
-#bsctut-cont h2{
+#bsctut-cont h2 {
   font-size: 36px;
   text-align: center;
   margin-bottom: 25px;
 }
-#bsctut-cont h3{
+#bsctut-cont h3 {
   font-size: 26px;
   text-align: start;
 }
-#bsctut-cont p{
+#bsctut-cont p {
   font-weight: 400;
 }
-#bsctut-cont iframe{
+#bsctut-cont iframe {
   margin-top: 5%;
   width: 100%;
   height: 80%;
 }
 
 /* ETH TUTORIAL */
-#ethtut-cont{
+#ethtut-cont {
   text-align: start;
   margin: 100px auto 100px auto;
   position: relative;
@@ -393,108 +393,108 @@
   background-position: bottom left;
   font-family: orbitron;
 }
-#ethtut-cont .row{
+#ethtut-cont .row {
   width: 90%;
   max-width: 1440px;
   margin: auto;
 }
-#ethtut-cont h2{
+#ethtut-cont h2 {
   font-size: 36px;
   text-align: center;
   margin-bottom: 25px;
 }
-#ethtut-cont h3{
+#ethtut-cont h3 {
   font-size: 26px;
   text-align: start;
 }
-#ethtut-cont p{
+#ethtut-cont p {
   font-weight: 400;
 }
-#ethtut-cont iframe{
+#ethtut-cont iframe {
   margin-top: 5%;
   width: 100%;
   height: 80%;
 }
 
 /* COMING SOON */
-#coming-cont{
+#coming-cont {
   padding-top: 100px;
   padding-bottom: 100px;
 }
-#coming-cont h2{
+#coming-cont h2 {
   font-size: 36px;
   font-weight: 700;
   font-family: orbitron;
   text-align: center;
 }
-#coming-cont img{
+#coming-cont img {
   max-height: 77px;
   max-width: 300px;
 }
-#cg{
+#cg {
   height: 85%;
 }
-#cmc{
+#cmc {
   height: 77px;
 }
 
 /* FOOTER */
-#footer-cont{
+#footer-cont {
   padding-bottom: 50px;
   padding-top: 100px;
   background-color: rgba(0, 0, 0, 0.733);
 }
-#footer-cont h2{
+#footer-cont h2 {
   font-size: 36px;
   text-align: center;
   margin-bottom: 25px;
   font-family: orbitron;
 }
-.foot-socials{
+.foot-socials {
   width: 90%;
   margin: auto;
   max-width: 700px;
 }
-.foot-socials a{
+.foot-socials a {
   color: #fff;
   background: linear-gradient(to bottom, #1c1f24 15%, #000000 100%);
   text-decoration: none;
   margin: 25px auto;
 }
-.foot-socials a:hover{
+.foot-socials a:hover {
   color: #fff;
   background: linear-gradient(to top right, #000 15%, #1c1f24 100%);
 }
-.foot-socials img{
+.foot-socials img {
   max-height: 20px;
   background-color: #fff;
   border-radius: 50%;
 }
 
 /* LAUNCHPAD */
-.launchpad-container{
+.launchpad-container {
   background-image: url("./Images/bg-map.png");
-  background-color: #1A1A1A;
+  background-color: #1a1a1a;
   background-size: contain;
   background-position: center;
   background-attachment: fixed;
 }
 
 /* OPEN PROJECTS */
-#openProject-cont .row .col-md-3{
+#openProject-cont .row .col-md-3 {
   background-color: #212121;
   min-width: 320px;
 }
-#openProject-cont .row{
+#openProject-cont .row {
   --bs-gutter-x: 0 !important;
   max-width: 1440px;
   margin: auto;
   justify-content: space-between;
 }
-.card-head{
+.card-head {
   display: flex;
 }
-.card-head .logo{
+.card-head .logo {
   min-height: fit-content;
   min-width: fit-content;
   height: 125px;
@@ -503,31 +503,31 @@
   justify-content: center;
   align-content: center;
 }
-.card-head #brand-bg{
-position: absolute;
-height: inherit;
-width: inherit;
-transition-duration: 5s;
+.card-head #brand-bg {
+  position: absolute;
+  height: inherit;
+  width: inherit;
+  transition-duration: 5s;
 }
-#openProject-cont .row .col-md-3:hover #brand-bg{
+#openProject-cont .row .col-md-3:hover #brand-bg {
   transform: rotate(360deg);
   transition-duration: 10s;
 }
-.card-head .logo #brand{
+.card-head .logo #brand {
   border-radius: 50%;
   height: 90px;
   margin: auto;
   width: 90px;
   transition-duration: 5s;
 }
-#openProject-cont .row .col-md-3:hover #brand{
+#openProject-cont .row .col-md-3:hover #brand {
   transform: scale(1.2);
   transition-duration: 10s;
 }
-#social-cards{
+#social-cards {
   margin: 25px auto;
 }
-#social-cards a{
+#social-cards a {
   color: #fff;
   font-size: 20px;
   margin: auto 5px;
@@ -535,10 +535,10 @@ transition-duration: 5s;
   padding: 5px 13px 12px 15px;
   background-color: rgba(0, 0, 0, 0.616);
 }
-#social-cards a:hover span{
-  color: #B9446F;
+#social-cards a:hover span {
+  color: #b9446f;
 }
-.sale-stat{
+.sale-stat {
   background-color: #591919;
   width: fit-content;
   padding: 3px 15px;
@@ -547,8 +547,8 @@ transition-duration: 5s;
   font-weight: 500;
   color: #fff;
 }
-.chain{
-  background-color: #56481D;
+.chain {
+  background-color: #56481d;
   width: fit-content;
   padding: 3px 15px;
   font-size: 14px;
@@ -557,15 +557,129 @@ transition-duration: 5s;
   font-weight: 500;
   color: #fff;
 }
-.rate p, .cap p, .schc p, .access p, .raised p{
+.rate p,
+.cap p,
+.schc p,
+.access p,
+.raised p {
   font-size: 12px;
   margin: 0;
   color: #999999;
 }
-.rate span, .cap span, .schc span, .access span{
+.rate span,
+.cap span,
+.schc span,
+.access span {
   font-size: 16px;
   font-weight: 500;
 }
-.progress-bar{
-  background-color: #B9446F !important;
+.progress-bar {
+  background-color: #b9446f !important;
+}
+
+/* PROJECT PAGE */
+
+/*Project bg animation*/
+.project-cont {
+  position: relative;
+}
+.project-bg {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  background-color: #131417;
+  position: absolute;
+  overflow: hidden;
+  z-index: 0;
+}
+.project-bg #home {
+  clip-path: url(#cache);
+}
+
+.project-bg #red {
+  fill: none;
+  opacity: 0.15;
+  stroke: #5e434c85;
+  stroke-width: 12;
+  stroke-miterlimit: 10;
+  animation: show 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+.project-bg #blue {
+  fill: none;
+  opacity: 0.15;
+  stroke: #1a1a1a;
+  stroke-width: 12;
+  stroke-miterlimit: 10;
+  animation: show 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+.project-bg #light-blue {
+  fill: none;
+  opacity: 0.15;
+  stroke: #bc3e6a;
+  stroke-width: 6;
+  stroke-miterlimit: 10;
+  stroke-dasharray: 200;
+  stroke-dashoffset: 800;
+  animation: draw 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes show {
+  0% {
+    opacity: 0.15;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 0.15;
+  }
+}
+.project-head .logo{
+  width: 125px;
+  height: 125px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#project-cont .container-fluid{
+  width: 100%;
+  max-width: 1440px;
+  margin: auto;
+}
+.project-head .logo img{
+  height: 90px;
+  width: 90px;
+  border-radius: 50%;
+  transition-duration: 5s;
+}
+.project-head .logo:hover img{
+  transform: scale(1.2);
+  transition-duration: 10s;
+}
+#project-logo-anim{
+  position: absolute;
+  height: inherit;
+  transition-duration: 5s;
+  width: inherit;
+}
+.project-head .logo:hover #project-logo-anim{
+  transform: rotate(360deg);
+  transition-duration: 10s;
 }
