--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,7 @@
   display: flex;
   flex-direction: column;
   text-align: right;
+  margin-top: 20px;
   right: 25px;
   bottom: 100px;
   z-index: 10;
@@ -179,7 +180,7 @@
   text-decoration: none;
   color: #fff;
   font-size: 20px;
-  margin-top: 10px;
+  margin-top: -7px;
 }
 .hero-socials a:hover {
   color: rgb(172, 172, 172);
@@ -445,6 +446,7 @@
   padding-top: 100px;
   background-color: rgba(0, 0, 0, 0.733);
 }
+
 #footer-cont h2 {
   font-size: 36px;
   text-align: center;
@@ -813,4 +815,24 @@ input::-webkit-inner-spin-button {
   margin: 5px;
   cursor: pointer;
   border-radius: 3px;
+}
+.dropitem{
+  display: grid;
+}
+.topnavdrop ul{
+  width: 200px;
+}
+.dropdown-i{
+  cursor: pointer;
+  text-align: center;
+  margin-top: 10px;
+  width: 100%;
+  border-bottom: 1px solid #000;
+}
+
+.create-presale{
+  display: flex;
+}
+.slicebtn ul li{
+ cursor: pointer;
 }
