--- a/src/App.css
+++ b/src/App.css
@@ -855,3 +855,20 @@ input::-webkit-inner-spin-button {
 .admindrop{
   width: 150px;
 }
+
+.project-nav div{
+  background-color: #131417;
+  padding: 5px;
+  font-size: 12px;
+  color: #fff;
+  width: 50px;
+}
+.project-nav{
+margin-right: 10px;
+}
+
+.project-nav div a{
+  color: #fff;
+  text-decoration: none;
+  font-weight: 100;
+}
