--- a/src/App.css
+++ b/src/App.css
@@ -863,12 +863,24 @@ input::-webkit-inner-spin-button {
   color: #fff;
   width: 50px;
 }
-.project-nav{
-margin-right: 10px;
+.project-nav ul{
+  background-color: #131417;
+  padding: 5px;
+  font-size: 12px;
+  color: #fff;
+  width: 50px;
+}
+.project-nav ul li{
+  color: #fff;
 }
 
-.project-nav div a{
-  color: #fff;
-  text-decoration: none;
-  font-weight: 100;
+.project-nav-items{
+  width: 10px;
+}
+
+.project-nav-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
